--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1800,7 +1800,7 @@ h6 .badge {
 .btn-secondary,
 .btn-secondary.disabled {
   box-shadow: 0 2px 6px #e1e5e8;
-  background-color: #cdd3d8;
+  background-color: #494949;
   border-color: #cdd3d8;
   color: #fff;
 }
@@ -1811,7 +1811,7 @@ h6 .badge {
 .btn-secondary.disabled:hover,
 .btn-secondary.disabled:focus,
 .btn-secondary.disabled:active {
-  background-color: #bfc6cd !important;
+  background-color: #323232 !important;
   color: #fff !important;
 }
 
@@ -1867,7 +1867,7 @@ h6 .badge {
 .btn-danger.disabled:hover,
 .btn-danger.disabled:focus,
 .btn-danger.disabled:active {
-  background-color: #fb160a !important;
+  background-color: #fb170b !important;
 }
 
 .btn-outline-danger:hover,
@@ -1954,7 +1954,7 @@ h6 .badge {
 .btn-warning.disabled:hover,
 .btn-warning.disabled:focus,
 .btn-warning.disabled:active {
-  background-color: #ff990d !important;
+  background-color: #ea8800 !important;
   color: #fff !important;
 }
 
@@ -2004,19 +2004,19 @@ h6 .badge {
 
 .btn-primary:focus,
 .btn-primary.disabled:focus {
-  background-color: #1e1f30 !important;
+  background-color: #2a2e4b !important;
 }
 
 .btn-primary:focus:active,
 .btn-primary.disabled:focus:active {
-  background-color: #1e1f30 !important;
+  background-color: #2a2e4b !important;
 }
 
 .btn-primary:active,
 .btn-primary:hover,
 .btn-primary.disabled:active,
 .btn-primary.disabled:hover {
-  background-color: #1e1f30 !important;
+  background-color: #2a2e4b !important;
 }
 
 .btn-outline-primary,
